--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Homebridge LED Strip",
-  "name": "homebridge-led-strip",
-  "version": "1.0.2-beta.0",
+  "name": "homebridge-led-strip-custom",
+  "version": "1.0.4-beta.0",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
