--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "displayName": "Homebridge LED Strip",
-  "name": "homebridge-led-strip-custom",
+  "name": "homebridge-led-strip",
   "version": "1.0.25",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
