--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-21"
+    "@abandonware/noble": "^1.9.2-21",
+    "suncalc": "^1.9.0"
   }
 }
